# Manifold-DB-Repo

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
cpp/include/manifold/: atlas.hpp  chart.hpp  geodesic_solver.hpp  linear_chart.hpp  manifold_db.hpp  manifold_types.hpp  metric_store.hpp  metric_tensor.hpp  tangent_space_index.hpp
cpp/src/: atlas.cpp  bindings.cpp  chart.cpp  geodesic_solver.cpp  linear_chart.cpp  manifold_db.cpp  metric_store.cpp  metric_tensor.cpp  tangent_space_index.cpp
docs/: API.md  ARCHITECTURE.md  index.md
docs/api/: api-reference.md
docs/architecture/: atlas.md  overview.md  query-engine.md
docs/tutorials/: advanced-queries.md  getting-started.md
examples/: basic_usage.py  cross_modal_demo.py  geodesic_demo.py  multimodal_demo.py  persistence_demo.py
examples/scripts/: benchmark_suite.py  geodesic_analysis.py  multi_modal_rag.py  quickstart.py  schema_evolution.py  temporal_manifold.py  tutorial_walkthrough.py
manifold_db/: __init__.py
manifold_db/api/: __init__.py  middleware.py  routes.py  server.py
manifold_db/atlas/: __init__.py  atlas_builder.py  atlas_manager.py  chart.py  transition_map.py
manifold_db/cli/: __init__.py  config_commands.py  main.py
manifold_db/connection/: __init__.py  parallel_transport.py  transport_registry.py
manifold_db/geodesic/: __init__.py  distance.py  exponential_map.py  solver.py
manifold_db/metric/: __init__.py  metric_tensor.py
manifold_db/query/: __init__.py  dsl.py  engine.py
manifold_db/storage/: __init__.py  backend.py  data_store.py
manifold_db/tangent_index/: __init__.py  index.py  tangent_bundle.py  tangent_space.py
manifold_db/utils/: __init__.py  config.py  logging.py  manifold_learning.py  math_utils.py
python/manifolddb/: __init__.py  io.py  torch_compat.py
scripts/: install.sh  run_tests.sh  start_server.py
tests/: conftest.py  test_atlas.py  test_chart.py  test_geodesic.py  test_geodesic_solver.py  test_manifold_db.py  test_manifolddb.py  test_metric_tensor.py
tests/benchmark/: test_performance.py
tests/integration/: conftest.py  test_end_to_end.py
tests/unit/: test_atlas.py  test_connection.py  test_geodesic.py  test_metric.py  test_query.py  test_storage.py  test_tangent_index.py  test_utils.py
