[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "manifold-db"
version = "0.1.0"
description = "A geometric inference engine for data on Riemannian manifolds"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Manifold DB Contributors"}]
keywords = ["manifold", "database", "riemannian", "geodesic", "differential-geometry", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "torch>=2.0",
    "networkx>=3.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "black>=23.0",
    "isort>=5.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.23",
]
benchmark = [
    "pytest-benchmark>=4.0",
    "memory-profiler>=0.60",
    "line-profiler>=4.0",
]
all = ["manifold-db[dev,docs,benchmark]"]

[project.scripts]
manifold-db = "manifold_db.cli.main:app"

[project.urls]
Homepage = "https://github.com/manifold-db/manifold-db"
Documentation = "https://manifold-db.readthedocs.io"
Repository = "https://github.com/manifold-db/manifold-db"

[tool.setuptools.packages.find]
include = ["manifold_db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "benchmark: marks performance benchmarks",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["manifold_db"]
omit = ["tests/*", "manifold_db/api/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
