[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "torch>=1.12",
]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "manifolddb"
version = "0.1.0"
description = "Riemannian geometric inference engine with geodesic solvers and manifold-aware data structures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "ManifoldDB Contributors" },
]
keywords = [
    "manifold",
    "riemannian",
    "geodesic",
    "metric-tensor",
    "atlas",
    "geometry",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "torch>=1.12",
    "numpy>=1.21",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
cuda = ["torch>=1.12"]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/manifolddb/manifolddb"
Repository = "https://github.com/manifolddb/manifolddb"
Issues = "https://github.com/manifolddb/manifolddb/issues"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
exclude = ["tests*", "docs*", "examples*"]
